# MindPalace

./: .gitignore  CMakeLists.txt  README.md
res/: resources.qrc
res/styles/: FlashCardStack.qml  HoloFlashCard.qml  MainWindow.qss
src/: main.cpp
src/model/: Card.cpp  Card.h  Deck.cpp  Deck.h
src/view/: MainWindow.cpp  MainWindow.h  StyleUtils.cpp  StyleUtils.h
